syntax = "proto3";

package pubsub.pb;

message TraceEvent {
  Type type = 1;
  bytes peerID = 2;
  int64 timestamp = 3;

  PublishMessage publishMessage = 4;
  RejectMessage rejectMessage = 5;
  DuplicateMessage duplicateMessage = 6;
  DeliverMessage deliverMessage = 7;
  AddPeer addPeer = 8;
  RemovePeer removePeer = 9;
  RecvRPC recvRPC = 10;
  SendRPC sendRPC = 11;
  DropRPC dropRPC = 12;
  Join join = 13;
  Leave leave = 14;
  Graft graft = 15;
  Prune prune = 16;

  enum Type {
    PUBLISH_MESSAGE = 0;
    REJECT_MESSAGE  = 1;
    DUPLICATE_MESSAGE = 2;
    DELIVER_MESSAGE = 3;
    ADD_PEER = 4;
    REMOVE_PEER = 5;
    RECV_RPC = 6;
    SEND_RPC = 7;
    DROP_RPC = 8;
    JOIN = 9;
    LEAVE = 10;
    GRAFT = 11;
    PRUNE = 12;
  }

  message PublishMessage {
    bytes messageID = 1;
    repeated string topics = 2;
  }

  message RejectMessage {
    bytes messageID = 1;
    bytes receivedFrom = 2;
    string reason = 3;
  }

  message DuplicateMessage {
    bytes messageID = 1;
    bytes receivedFrom = 2;
  }

  message DeliverMessage {
    bytes messageID = 1;
  }

  message AddPeer {
    bytes peerID = 1;
    string proto = 2;
  }

  message RemovePeer {
    bytes peerID = 1;
  }

  message RecvRPC {
    bytes receivedFrom = 1;
    RPCMeta meta = 2;
  }

  message SendRPC {
    bytes sendTo = 1;
    RPCMeta meta = 2;
  }

  message DropRPC {
    bytes sendTo = 1;
    RPCMeta meta = 2;
  }

  message Join {
    string topic = 1;
  }

  message Leave {
    string topic = 2;
  }

  message Graft {
    bytes peerID = 1;
    string topic = 2;
  }

  message Prune {
    bytes peerID = 1;
    string topic = 2;
  }

  message RPCMeta {
    repeated MessageMeta messages = 1;
    repeated SubMeta subscription = 2;
    ControlMeta control = 3;
  }

  message MessageMeta {
    bytes messageID = 1;
    repeated string topics = 2;
  }

  message SubMeta {
    bool subscribe = 1;
    string topic = 2;
  }

  message ControlMeta {
    repeated ControlIHaveMeta ihave = 1;
    repeated ControlIWantMeta iwant = 2;
    repeated ControlGraftMeta graft = 3;
    repeated ControlPruneMeta prune = 4;
  }

  message ControlIHaveMeta {
    string topic = 1;
    repeated bytes messageIDs = 2;
  }

  message ControlIWantMeta {
    repeated bytes messageIDs = 1;
  }

  message ControlGraftMeta {
    string topic = 1;
  }

  message ControlPruneMeta {
    string topic = 1;
  }
}

message TraceEventBatch {
  repeated TraceEvent batch = 1;
}
